--- a/首页动画.html
+++ b/首页动画.html
@@ -101,10 +101,14 @@
             tl4.staggerFrom(split1.chars, 0.8, {
                 opacity: 0,
                 scale: 0,
+                x: 100,
+                rotationY: 180,
                 ease: Power1.easeInOut
             }, 0.03).staggerFrom(split2.chars, 0.8, {
                 opacity: 0,
                 scale: 0,
+                x: 100,
+                rotationY: 180,
                 ease: Power1.easeInOut
             }, 0.03);
             tl4.play(0);
