--- a/index.html
+++ b/index.html
@@ -3,268 +3,172 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>SLIMU RUSH弹幕射击独立游戏</title>
-    <meta name="description" content="SLIMU RUSH-弹幕射击独立游戏,游戏,电脑,PC,移动端,多人,联机,RPG,手机" />
-    <meta name="Keywords" content="Steam 游戏 电脑 PC 多人联机 RPG 手机 独立游戏" />
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <title>首页动画测试</title>
+    <audio src="./audio/may_be_happy.mp3" preload="meta" loop autoplay id="bgmusic"></audio>
+    <link rel="stylesheet" href="./css/首页动画.css">
 
-    <link rel="stylesheet" href="css/style.css">
     <script src="https://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 
-    <!-- 一定要先加载jquery 把插件的顺序搞好= = -->
-
-    <script src="./js/base.js" type="text/javascript"></script>
+    <!-- GASP专业网页动画插件 -->
+    <script src="./js/greensock-js/src/minified/TweenLite.min.js">
+    </script>
+    <script src="./js/greensock-js/src/minified/plugins/CSSPlugin.min.js">
+    </script>
+    <script src="./js/greensock-js/src/minified/plugins/BezierPlugin.min.js">
+    </script>
+    <script src="./js/greensock-js/src/minified/TimelineLite.min.js">
+    </script>
+    <script src="./js/greensock-js/src/minified/easing/EasePack.min.js">
+    </script>
+    <script src="./js/greensock-js/src/minified/TweenMax.min.js">
+    </script>
+    <script src="./js/greensock-js/src/minified/plugins/TextPlugin.min.js"></script>
+    <script src="./js/greensock-js/src/minified/plugins/ScrollToPlugin.min.js"></script>
+    <script src="./js/greensock-js/src/minified/plugins/ModifiersPlugin.min.js"></script>
+    <script src="./js/greensock-js/src/SplitText.min.js"></script>
 
 </head>
 
 <body>
+    <div id="back1"></div>
+    <div id="back2">
+        <div class="back_wrap">
+            <div class="boxes">1</div>
+            <div class="boxes">2</div>
+        </div>
+    </div>
+
+    <div id="index_outer1" class="index_outer"></div>
+    <div id="index_outer2" class="index_outer"></div>
+    <div id="index_outer3" class="index_outer"></div>
+    <div id="index_outer4" class="index_outer"></div>
+
+    <div class="index_set">
+        <div class="index_center">
+            <a href="./SLIMU_RUSH_GAMESET.html">SLIMU RUSH游戏首页</a>
+            <a href="./GSAP动画.html">GSAP动画demo</a>
+        </div>
+    </div>
+    <div class="logo_set"><img src="./img/logo.png" alt="" id="logo1"></div>
+    <div class="logo_set2"><img src="./img/slimu_shendan2.gif" alt="" id="logo2"></div>
+    <div>
+        <p id="title1">WELCOME TO THE SLIMU RUSH!!!~</p>
+    </div>
+    <div>
+        <p id="title2">HAVE A NICE DAY!~</p>
+    </div>
+    <script type="text/javascript">
+        var split1 = new SplitText($("#title1"));
+        var split2 = new SplitText($("#title2"));
+        var index_outers = $(".index_outer").children();
+        var titles = $(".index_set");
+        var logo_img = $(".logo_set");
+        var logo_img2 = $(".logo_set2");
+
+        var tl2 = new TimelineMax({
+            repeat: -1,
+            align: "sequence"
+        });
+        var tl3 = new TimelineMax({
+            repeat: -1,
+            align: "sequence"
+        });
+        var tl4 = new TimelineMax({
+            align: "sequence"
+        });
+
+        function last_animate() {
+            tl2.pause();
+            tl3.pause();
+            tl2.to(logo_img, 0.4, {
+                y: -100,
+                ease: Power1.easeInOut
+            }).to(logo_img, 0.5, {
+                y: 0,
+                ease: Bounce.easeOut,
+            });
+            tl3.to(logo_img2, 0.8, {
+                rotation: 15,
+                delay: 0.2,
+                ease: Power1.easeInOut
+            }).to(logo_img2, 0.8, {
+                rotation: 0,
+                ease: Power1.easeInOut
+            }).to(logo_img2, 0.8, {
+                rotation: -15,
+                ease: Power1.easeInOut
+            }).to(logo_img2, 0.8, {
+                rotation: 0,
+                ease: Power1.easeInOut
+            });
+            tl4.set($("#title1"), {
+                opacity: 1
+            });
+            tl4.set($("#title2"), {
+                opacity: 1
+            });
+            tl4.staggerFrom(split1.chars, 0.8, {
+                opacity: 0,
+                scale: 0,
+                x: 100,
+                rotationY: 180,
+                ease: Power1.easeInOut
+            }, 0.03).staggerFrom(split2.chars, 0.8, {
+                opacity: 0,
+                scale: 0,
+                x: 100,
+                rotationY: 180,
+                ease: Power1.easeInOut
+            }, 0.03);
+            tl4.play(0);
+            tl3.play(0);
+            tl2.play(0); //保证在时间轴0秒 开始
+        }
+
+        var tl1 = new TimelineMax({
+            align: 'sequence',
+        });
+
+        tl1.set(titles, {
+            opacity: 0,
+            scale: 0
+        }); //初始化
+
+        tl1.to([$("#index_outer1"), $("#index_outer2")], 0.8, {
+            top: 0,
+            delay: 1,
+            ease: Power1.easeInOut
+        }).to([$("#index_outer3"), $("#index_outer4")], 0.8, {
+            right: 0,
+            ease: Power1.easeInOut
+        }, ).to(titles, 1, {
+            scale: 1,
+            opacity: 1,
+            ease: Bounce.easeOut
+        }, ).to(logo_img, 0.8, {
+            bottom: "20%",
+            ease: Power1.easeInOut
+        }, ).set(logo_img, {
+            "z-index": 1
+        }, ).to(logo_img, 0.8, {
+            bottom: "0%",
+            ease: Bounce.easeOut
+        }, ).set(logo_img2, {
+            opacity: 1
+        }, ).to(logo_img2, 0.4, {
+            bottom: "75.5%",
+            left: "54.5%",
+            ease: Power1.easeInOut
+        }, ).set(logo_img2, {
+            "z-index": 1
+        }, ).to(logo_img2, 0.4, {
+            bottom: "68%",
+            ease: Bounce.easeOut
+        }, );
+        tl1.addCallback(last_animate, "+=0.2"); //使用此方法在TimelineMax里面时间轴最后面1秒后执行
     </script>
-    <!-- 头部区域 -->
-    <div class="header w">
-        <!-- logo部分 -->
-        <div class="logo" id="logo_set">
-            <img src="./img/logo2.png ">
-        </div>
-
-
-        <!-- 导航 -->
-        <div class="nav ">
-            <ul>
-                <li>
-                    <a href=" ">首页</a>
-                </li>
-                <li>
-                    <a id="online_game" href="" target="_blank">在线试玩</a>
-                </li>
-                <li>
-                    <a href=" ">游戏设定</a>
-                </li>
-            </ul>
-        </div>
-        <!-- 搜索模块 -->
-        <div class="search ">
-            <input type="text " placeholder="输入关键字 ">
-            <button></button>
-        </div>
-
-        <!-- 用户模块 -->
-        <div class="user ">
-            <img src="img/user.png ">
-            <span>馒头骑士</span>
-        </div>
-    </div>
-    <!-- banner区域 -->
-    <div class="banner ">
-        <!-- 板心 -->
-        <div class="w ">
-            <video preload="auto" src="./video/slimu_rush_0.mp4 " class="back-video " autoplay loop controls></video>
-            <div class="nav-left ">
-                <ul>
-                    <li><a href=" ">SLIMU RUSH V1.01<span>&gt;</span></a></li>
-                    <li><a href=" ">BOSS攻略 全解<span>&gt;</span></a></li>
-                    <li><a href=" ">游戏全章节剧情简介<span>&gt;</span></a></li>
-                    <li><a href=" ">SLIMU 可以换装啦！<span>&gt;</span></a></li>
-                    <li><a href=" ">强敌降临！RT-7X登场<span>&gt;</span></a></li>
-                    <li><a href=" ">节日副本 正是踏青时<span>&gt;</span></a></li>
-                    <li><a href=" ">空间站系统开放！<span>&gt;</span></a></li>
-                    <li><a href=" ">联机模式最新优化！<span>&gt;</span></a></li>
-                    <li><a href=" ">支线剧情全解<span>&gt;</span></a></li>
-                </ul>
-            </div>
-
-            <!-- 下边导览栏 -->
-            <div class="scroll-img ">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <!-- 右边广告 -->
-            <div class="nav-right ">
-                <h2>最新公告</h2>
-                <div class="adv ">
-                    <ul>
-                        <li>
-                            <a href=" ">【优惠特价】</a>
-                            <p>slimu rush历低价88元,请登陆...</p>
-                        </li>
-                        <li>
-                            <a href=" ">【全体团购】</a>
-                            <p>详细内容...</p>
-                        </li>
-                        <li>
-                            <a href=" ">【特色活动】</a>
-                            <p>详细内容...</p>
-                        </li>
-                        <a href=" " class="more ">更多公告</a>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="upper ">
-        <img src="./img/airo.png " alt="哎呀不见了！" id="upper_img">
-    </div>
-
-    <!-- 推荐区域1 -->
-    <div class="goods w ">
-        <h3>游戏推荐</h3>
-        <ul>
-            <li><a href=" ">SLIMU RUSH</a></li>
-            <li><a href=" ">SLIMU RUSH 皇家版</a></li>
-            <li><a href=" ">SLIMU 太空物语</a></li>
-            <li><a href=" ">SLIMU 末世危机</a></li>
-            <li><a href=" ">SLIMU 重生勇者</a></li>
-        </ul>
-        <a href=" " class="mod ">查看更多</a>
-    </div>
-    <!-- 商品列表展示 -->
-    <div class="items-show w ">
-        <div class="head ">
-            <h3>推荐游戏</h3>
-            <a href=" ">查看全部</a>
-        </div>
-        <div class="items-list ">
-            <ul class="clearfix ">
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-                <li>
-
-                    <div class="mainimg "><img src="./img/user.png " alt=" "></div>
-                    <img src="./img/user.png " alt=" " class="subimg ">
-                    <h4>SLIMU RUSH皇家版</h4>
-                    <div class="info "><span>【热销】</span> 11475人已入手</div>
-                </li>
-
-
-            </ul>
-        </div>
-    </div>
-    <!-- 底部 -->
-    <div class="footer ">
-        <div class="w ">
-            <div class="copyright ">
-                <img src="img/logo2.png " alt=" ">
-                <p>全球游戏大赏第一名SLIMU RUSH 第一弹幕射击网络RPG游戏 <br />@2021年馒头骑士保留所有权力 -粤ICP备XXXXXX号</p>
-                <a href=" ">联系我们</a>
-            </div>
-            <div class="links ">
-                <dl>
-                    <dt>关于游戏</dt>
-                    <dd>
-                        <a href=" ">作者</a></dd>
-                    <dd>
-                        <a href=" ">语言</a></dd>
-                    <dd>
-                        <a href=" ">平台</a></dd>
-                    <dd>
-                        <a href=" ">剧情</a></dd>
-                    <dd>
-                        <a href=" ">彩蛋</a></dd>
-                </dl>
-                <dl>
-                    <dt>关于游戏</dt>
-                    <dd>
-                        <a href=" ">作者</a></dd>
-                    <dd>
-                        <a href=" ">语言</a></dd>
-                    <dd>
-                        <a href=" ">平台</a></dd>
-                    <dd>
-                        <a href=" ">剧情</a></dd>
-                    <dd>
-                        <a href=" ">彩蛋</a></dd>
-                </dl>
-                <dl>
-                    <dt>关于游戏</dt>
-                    <dd>
-                        <a href=" ">作者</a></dd>
-                    <dd>
-                        <a href=" ">语言</a></dd>
-                    <dd>
-                        <a href=" ">平台</a></dd>
-                    <dd>
-                        <a href=" ">剧情</a></dd>
-                    <dd>
-                        <a href=" ">彩蛋</a></dd>
-                </dl>
-            </div>
-        </div>
-    </div>
-    <div class="bg-music" id="bg_music"><audio id="bg_audio" src="./audio/may_be_happy.mp3 " controls loop></audio> <img src="./img/slimu_shendan2.gif " alt=" " id="image_set"></div>
-
-
-
 </body>
 
 </html>
