--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
     <div id="index_outer3" class="index_outer"></div>
     <div id="index_outer4" class="index_outer"></div>
 
-    <div class="index_set">
-        <div class="index_center">
-            <a href="./SLIMU_RUSH_GAMESET.html">SLIMU RUSH游戏首页</a>
-            <a href="./GSAP动画.html">GSAP动画demo</a>
+    <div class="index_sum">
+        <div class="index_set">
+            <div class="index_center">
+                <a href="./SLIMU_RUSH_GAMESET.html">SLIMU RUSH游戏首页</a>
+                <a href="./GSAP动画.html">GSAP动画demo</a>
+            </div>
         </div>
-    </div>
-    <div class="logo_set"><img src="./img/logo.png" alt="" id="logo1"></div>
-    <div class="logo_set2"><img src="./img/slimu_shendan2.gif" alt="" id="logo2"></div>
-    <div>
+        <div class="logo_set"><img src="./img/logo.png" alt="" id="logo1"></div>
+        <div class="logo_set2"><img src="./img/slimu_shendan2.gif" alt="" id="logo2"></div>
         <p id="title1">WELCOME TO THE SLIMU RUSH!!!~</p>
-    </div>
-    <div>
+
         <p id="title2">HAVE A NICE DAY!~</p>
     </div>
+
     <script type="text/javascript">
         var split1 = new SplitText($("#title1"));
         var split2 = new SplitText($("#title2"));
@@ -153,7 +153,7 @@
         }, ).set(logo_img, {
             "z-index": 1
         }, ).to(logo_img, 0.8, {
-            bottom: "0%",
+            bottom: "5%",
             ease: Bounce.easeOut
         }, ).set(logo_img2, {
             opacity: 1
